--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,7 @@ description: [A short description of your site's purpose]
 
 show_downloads: ["true" or "false" (unquoted) to indicate whether to provide a download URL]
 google_analytics: [Your Google Analytics tracking ID]
+
+layout: page
+title: "EVENTS"
+permalink: /EVENTS.md
