--- a/_config.yml
+++ b/_config.yml
@@ -12,4 +12,4 @@ google_analytics: [Your Google Analytics tracking ID]
 
 layout: page
 title: "EVENTS"
-permalink: /EVENTS.md
+permalink: /lorcana/EVENTS.md
