--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,6 @@ title: "EVENTS"
 permalink: /lorcana/EVENTS.md
 
 remote_theme: pages-themes/cayman@v0.2.0
+
+title: Octocat's homepage
+description: Bookmark this to keep an eye on my project updates!
